# UI_COT_RAG

./: .env  .gitignore  .virtual_env  NotoSansCJKtc-Regular.pkl  data_2995.xlsx  dataset(no_law).csv  dataset.csv  fact_metadata_hnsw.npy  generate_compensate.py  generate_laws.py  generate_sheet.py  generate_truth.py  kg.py  ollama_finetune.py  ollama_rag.py  practice.py  pyproject.toml  readme.md  requirements.txt  test.py  ui.py  ui2.py  uii.py  utils.py
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements-checkpoint.txt  ui-checkpoint.py
KG_RAG/: KG_Build_2.1.py  KG_Faiss_Query.py  KG_Generate.py
KG_RAG_B/: .gitignore  KG_Faiss_Query.py  KG_Faiss_Query_3068.py  KG_Generate.py  KG_Google_Sheet.py  define_case_type.py  requirements.txt
chunk_RAG/: .gitignore  delete_all_neo4j_data.py  main.py  ts_build.py  ts_elasticsearch_utils.py  ts_main.py  ts_retrieval_system.py
fonts/: NotoSansCJKtc-Regular.cw127.pkl  NotoSansCJKtc-Regular.pkl
